# psx-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  imgui.ini  vcpkg.json
assets/textures/: test.tga
cmake/: toolchain-mingw.cmake
editor/: CMakeLists.txt
editor/shaders/: psx.frag
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/shaders/: blit.frag  blit.vert  psx.vert
engine/src/: main.cpp
shared/: scene_format.hpp
